2009-09-01  Marcus Brinkmann  <marcus@g10code.de>

	* setenv.c: Do not include "assuan-defs.h", instead redefine
	setenv, unsetenv, clearenv in place.
	* assuan-socket-server.c: Use _assuan_free instead of xfree.
	* assuan-pipe-connect.c: Fix syntax error.
	* assuan-defs.h: Remove some duplicated W32 stuff.
	* Makefile.am (libassuan_la_LIBADD, libassuan_pth_la_LIBADD): Add
	@NETLIBS@.
	* versioninfo.rc.in (FILEVERSION): Set to @BUILD_FILEVERSION@.
	("FileDescription", "FileVersion", "InternalName")
	("LegalCopyright", "OriginalFilename", "ProductName"): Replace c&p
	garbage.
	* libassuan.def: Remove assuan_get_peercred.

2009-08-26  Marcus Brinkmann  <marcus@g10code.de>

	* libassuan-config.in: Add gpg-error.
	* assuan-buffer.c, assuan-inquire.c, assuan-handler.c,
	assuan-util.c, assuan-client.c, assuan-socket-connect.c,
	assuan-pipe-connect.c, assuan-defs.h, assuan-socket.c,
	assuan-connect.c, assuan-uds.c, assuan-socket-server.c,
	assuan-listen.c, assuan-pipe-server.c: Return gpg_error_t instead
	assuan_error_t everywhere.  Return gpg error codes everywhere.
	Replace xtrymalloc, xfree, etc with _assuan_malloc, _assuan_free
	etc.  Protect include <config.h> by HAVE_CONFIG_H where not done
	so already.
	* versioninfo.rc.in, libassuan.vers, libassuan.def,
	assuan-error.c: New files.
	* Makefile.am: Add libtool handling and gpg-error (also for W32).
	(EXTRA_DIST): Remove mkerrors, add libassuan.vers,
	versioninfo.rc.in and libassuan.def.
	(BUILT_SOURCES, MOSTLYCLEANFILES): Removed.
	(common_sources): Remove assuan-errors.c, add assuan-error.c.
	* assuan.h: Include <gpg-error.h>.
	[_ASSUAN_ONLY_GPG_ERRORS]: Feature removed.
	(assuan_init_connected_socket_server, assuan_strerror)
	(assuan_pipe_connect2): Removed obsolete interfaces.
	(assuan_error_t): Removed type.
	(assuan_flag_t): Changed from enum to unsigned int.
	(ASSUAN_NO_WAITPID, ASSUAN_CONFIDENTIAL): Changed from enum to macro.
	(assuan_process): Return gpg_error_t instead of int.